--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="build" path="src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
-	<classpathentry kind="lib" path="C:/Users/Critter/Documents/AnkiOverdriveTag/server/lib/google-collections-1.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ModAnkiDriveSDK"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
